corrected grid rows
corrected the amount of rows for desktop and tablet for the grid in the bottom of index and games page so that the whitespace isn't taking up too much space.

--- a/css/assets.css
+++ b/css/assets.css
@@ -537,6 +537,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
+  max-width: 1500px;
 }
 
 .ft-1 {
@@ -1068,6 +1069,10 @@ footer {
     grid-template-rows: repeat(10, 3rem);
   }
 
+  .buy-container {
+    grid-template-rows: repeat(3, min-content) 20rem;
+  }
+
   /* Hero image index page */
   .mainc-3 {
     background-image: url(../Images/hero-image-tablet.jpg);
@@ -1147,6 +1152,7 @@ footer {
   /* Trending now - index page */
   .trending-container {
     grid-template-columns: min-content min-content;
+    grid-template-rows: 1fr 1fr 20rem;
     column-gap: 15%;
   }
 
@@ -1154,6 +1160,11 @@ footer {
   .games-container {
     grid-template-columns: repeat(3, 1fr);
     gap: 4em;
+  }
+
+  /* This is for the ad section and release dates - games page */
+  .mid-section-games{
+  grid-template-rows: 1fr 20rem;
   }
 
   /* Contact form */
@@ -1215,6 +1226,7 @@ footer {
   /* This is for the ad section and release dates - games page */
   .mid-section-games{
     grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 20rem;
     gap: 3em;
   }
 
@@ -1377,6 +1389,7 @@ footer {
   /* Trending now - index page */
   .trending-container {
     grid-template-columns: repeat(4, min-content);
+    grid-template-rows: 1fr 20rem;
     column-gap: 10%;
   }
 
@@ -1436,7 +1449,7 @@ footer {
   .buy-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 20rem;
   }
 
   .bc-1 {
